# agt

./: .gitignore  .gitmodules  AGENTS.md  CODING_PROMPT.md  Cargo.toml  DECK.md  DESIGN_20260104.md  DESIGN_20260105.md  ISSUE_005.md  LICENSE  Makefile  README.md  TODO.md  mise.toml
.githooks/: pre-commit  pre-commit-shellcheck  validate-version.sh
.github/scripts/: check-no-error-in-logs.sh  diagnose-windows-git.ps1  run-windows-tests-with-timeout.ps1  run-with-agt-log.sh
.github/workflows/: ci.yml
crates/agt/: Cargo.toml  build.rs
crates/agt-worktree/: Cargo.toml  build.rs
crates/agt-worktree/src/: main.rs
crates/agt-worktree/tests/: worktree_tests.rs
crates/agt/src/: cli.rs  config.rs  filter.rs  gix_cli.rs  logging.rs  main.rs  path_util.rs  scanner.rs  snapshot.rs
crates/agt/src/commands/: autocommit.rs  clone.rs  fork.rs  git_porcelain.rs  init.rs  list_sessions.rs  mod.rs  passthrough.rs  prune_session.rs  session.rs  snapshot.rs  status.rs
crates/agt/src/isolation/: mod.rs
crates/agt/tests/: build_version_support_tests.rs  integration_tests.rs  issue_005.rs  windows_git_diag.rs
deck/conf/: nginx.conf
deck/html/: index.html
deck/lua/: api_projects.lua  api_session_autocommit.lua  api_session_detail.lua  api_session_fork.lua  api_session_start.lua  api_session_stop.lua  api_sessions.lua  api_snapshots.lua  db.lua  proxy_opencode.lua  proxy_websocket.lua
deck/sql/: schema.sql
docs/: TEST_STANDARDS.md  agt.1.txt
scripts/: setup-windows-ci-emulation.sh
tests/exploratory/: ADVANCED_TESTING.md  ORCHESTRATION.md  README.md
tests/exploratory/suite0-documentation-audit/: RUNBOOK.md
tests/exploratory/suite1-git-kata/: RUNBOOK.md
tests/exploratory/suite10-worktree-tool/: RUNBOOK.md
tests/exploratory/suite11-opencode-deck/: RUNBOOK.md  setup.sh
tests/exploratory/suite12-autocommit-sandbox-mv/: RUNBOOK.md
tests/exploratory/suite2-single-agent/: RUNBOOK.md
tests/exploratory/suite3-parallel-agents/: RUNBOOK.md
tests/exploratory/suite4-time-travel/: RUNBOOK.md
tests/exploratory/suite5-edge-cases/: RUNBOOK.md  setup.sh
tests/exploratory/suite6-filtering/: RUNBOOK.md
tests/exploratory/suite7-failure-recovery/: RUNBOOK.md
tests/exploratory/suite7-stress-test/: RUNBOOK.md
tests/exploratory/suite8-failure-recovery/: RUNBOOK.md
tests/exploratory/suite8-worktree-tool/: RUNBOOK.md
tests/exploratory/suite9-autocommit-sandbox-mv/: RUNBOOK.md
tests/exploratory/suite9-documentation-audit/: RUNBOOK.md
