[workspace]
members = ["crates/agt", "crates/agt-worktree"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["AI Coding Agent"]
license = "MIT"

[workspace.dependencies]
# Shared runtime dependencies (member crates decide whether each is a normal dependency)
gix = { version = "0.68", features = ["blocking-network-client", "tree-editor", "dirwalk"] }
gix-object = "0.46"
gix-path = "0.10"
gix-index = "0.37"
gix-worktree = "0.38"
gix-worktree-state = "0.15"
gix-features = "0.39"
gix-ref = "0.49"
gix-fs = "0.12"
gix-dir = "0.19"
clap = { version = "4", features = ["derive"] }
jwalk = "0.8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared test-only version pins (used via member `dev-dependencies`)
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"
unused = { level = "deny", priority = -1 }
dead_code = "deny"
unused_imports = "deny"
unused_must_use = "deny"
unused_variables = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
# Pedantic lints - allow some that are too strict
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
needless_raw_string_hashes = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
map_unwrap_or = "allow"
default_trait_access = "allow"
format_push_string = "allow"
uninlined_format_args = "allow"
implicit_clone = "allow"
explicit_iter_loop = "allow"
match_same_arms = "allow"
used_underscore_binding = "allow"
if_not_else = "allow"
single_match_else = "allow"
unnecessary_wraps = "allow"
needless_question_mark = "allow"
redundant_closure_for_method_calls = "allow"
manual_let_else = "allow"
match_wildcard_for_single_variants = "allow"
unreadable_literal = "allow"
# Allow some casts that are reasonable
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
