[package]
name = "agt-worktree"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minimal worktree add/remove helper for agt"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
gix = { workspace = true }
gix-index = "0.37"
gix-worktree = "0.38"
gix-worktree-state = "0.15"
gix-features = "0.39"
gix-fs = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
gix-object = { workspace = true }

[lints]
workspace = true

[[bin]]
name = "agt-worktree"
path = "src/main.rs"
